# SmartCalc-v2.0

./: CMakeLists.txt  Makefile  README.md
src/: main.cc
src/controller/calculator/: calculator.cc  calculator.h
src/controller/credit/: credit.cc  credit.h
src/controller/deposit/: deposit.cc  deposit.h
src/controller/graph/: graph.cc  graph.h
src/model/calculator/: calculator.cc  calculator.h
src/model/credit/: credit.cc  credit.h
src/model/deposit/: deposit.cc  deposit.h
src/model/graph/: graph.cc  graph.h
src/view/: window.cc  window.h  window.ui
src/view/calculator/: calculator.cc  calculator.h
src/view/credit/: credit.cc  credit.h
src/view/deposit/: deposit.cc  deposit.h
src/view/graph/: graph.cc  graph.h
src/view/graph/qcustomplot/: qcustomplot.cpp
tests/: main.cc  tests.cc  tests.h
